# frostbyte-lang

./: .gitignore  CONTRIBUTING.md  LICENSE  README-PROOF.html  README.rst  SECURITY.md  run-tests.bat  setup.cfg  tox.ini
.github/workflows/: python-pytest.yml
docs/: api-toc.rst  conf.py  getting-started.rst  index.rst  make-api.json  requirements.txt
docs/api/: frostbyte.lang.rst  frostbyte.rst  frostbyte.scripts.rst
frostbyte/: __init__.py  scripts.py
frostbyte/lang/: __init__.py
test/: test_00_init.py
