# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = frostbyte-lang
author = hashberg
author_email = sg495@users.noreply.github.com
description = Reference implementation for the Frostbyte Programming Language and Smart Contract Protocol.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/frostbyte-lang/frostbyte-lang
project_urls =
    Bug Tracker = https://github.com/frostbyte-lang/frostbyte-lang/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing_extensions
    typing_validation
    multiformats
    dag-cbor
    rich

[options.package_data]
* = py.typed

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    mypy
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    frostbyte = frostbyte.scripts:frostbyte
